<resources>
    <string name="app_name">MyWeatherApp</string>
    <string name="action_settings">Settings</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="temp_c">Temp C°</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed Km/h</string>
    <string name="pressure">Pressure</string>
    <string name="location">Location</string>
</resources>
