<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailsActivity">
    
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="16dp" android:orientation="horizontal">
            <TextView android:text="@string/city" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
            <TextView android:id="@+id/cityName" android:layout_width="0dp"  android:gravity="end" android:layout_height="wrap_content" android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="16dp" android:orientation="horizontal">
            <TextView android:text="@string/state" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
            <TextView android:id="@+id/cityState" android:layout_width="0dp"  android:gravity="end" android:layout_height="wrap_content" android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="16dp" android:orientation="horizontal">
            <TextView android:text="@string/temp_c" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
            <TextView android:id="@+id/cityTemp" android:layout_width="0dp"  android:gravity="end" android:layout_height="wrap_content" android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="16dp" android:orientation="horizontal">
            <TextView android:text="@string/humidity" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
            <TextView android:id="@+id/cityHumidity" android:layout_width="0dp"  android:gravity="end" android:layout_height="wrap_content" android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="16dp" android:orientation="horizontal">
            <TextView android:text="@string/wind_speed" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
            <TextView android:id="@+id/cityWindSpeed" android:layout_width="0dp"  android:gravity="end" android:layout_height="wrap_content" android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="16dp" android:orientation="horizontal">
            <TextView android:text="@string/pressure" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
            <TextView android:id="@+id/cityPressure" android:layout_width="0dp"  android:gravity="end" android:layout_height="wrap_content" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>